# surfa

./: .gitignore  MANIFEST.in  changelog.md  pyproject.toml  readme.md  release.md  requirements.txt  setup.py
.eggs/Cython-0.29.32-py3.6-linux-x86_64.egg/EGG-INFO/: PKG-INFO  RECORD  WHEEL
.eggs/numpy-1.19.5-py3.6-linux-x86_64.egg/EGG-INFO/: RECORD
.eggs/pyparsing-3.0.9-py3.6.egg/EGG-INFO/: RECORD
.github/workflows/: cibuildwheel.yml  test.yml
docs/: Makefile  conf.py  coordinates.md  images.md  index.md  installation.md  meshes.md  requirements.txt  visualization.md
docs/guide/: coordinates.md  images.md  index.md  installation.md  labels.md  meshes.md  visualization.md
docs/reference/: affine.rst  geometry.rst  image.rst  index.md  io.rst  mesh.rst  system.rst  visualization.rst
docs/static/: style.css
docs/templates/autosummary/: class.rst
surfa/: __init__.py  freesurfer.py  logger.py  pipeline.py  system.py
surfa/core/: __init__.py  array.py  framed.py  labels.py  slicing.py
surfa/image/: framed.py  interp.pyx  slicing.py
surfa/io/: __init__.py  affine.py  framed.py  fsio.py  fsnifti1extension.py  labels.py  mesh.py  protocol.py  timeseries.py  utils.py
surfa/mesh/: __init__.py  cache.py  distance.py  intersection.h  intersection.py  intersection.pyx  mesh.py  overlay.py  ray.py  sphere.py  timeseries.py
surfa/transform/: __init__.py  affine.py  conversion.py  deformfield.py  geometry.py  orientation.py  space.py  warp.py
surfa/utils/: __init__.py
surfa/vis/: __init__.py  freesurfer.py  freeview.py
test/: test_framed.py  test_numpy_compat.py
