[build-system]
# Cython 3.1+ needed for proper abi3 support
# Should change to `numpy >=2,<3` when NumPy 1.x support is dropped
requires = ['setuptools', 'wheel', 'Cython>=3.1', 'numpy']

[tool.cibuildwheel]
build = ["cp3{8,9,10,11}-*"]
skip = [
  "cp38-*musl*",  # no SciPy wheels, no need to make them for us
]
archs = "native"
before-build = "pip install abi3audit"
test-command = "python -c \"import surfa; print(surfa.__version__)\""

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.macos]
archs = ["native"]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit"
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]
