[build-system]
# Cython 3.1+ needed for proper abi3 support
# Should change to `numpy >=2,<3` when NumPy 1.x support is dropped
requires = ['setuptools', 'wheel', 'Cython>=3.1', 'numpy']

[tool.cibuildwheel]
build = ["cp3{8,9,10,11}-*"]
skip = [
  # no SciPy wheels, no need to make them for us
  "cp38-*musllinux*",
  "cp39-musllinux_aarch64"
]
archs = "native"
# Fail early if no binary wheels for the given platform
before-build = "pip install abi3audit numpy scipy --only-binary=\"numpy,scipy\""
test-command = "python -c \"import surfa; print(surfa.__version__)\""

[tool.cibuildwheel.linux]
repair-wheel-command = [
  "auditwheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.macos]
archs = ["native"]
repair-wheel-command = [
  "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel abi3audit numpy scipy --only-binary=:all:\"numpy,scipy\""
repair-wheel-command = [
  "delvewheel repair -w {dest_dir} {wheel}",
  "bash tools/audit_wheel.sh {wheel}",
]
